# paypulse

./: .gitignore  README.md  index.html  mini.html  package.json  pnpm-lock.yaml  popover.html  settings.html  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
design/: index.html  main.html  mini-window.html  pixel.css  settings.html  sprites.js  tray.html
docs/: PLAN.md  paypulse-p-pixel-shadow-variants.html
docs/logo-generated/: paypulse-logo-results.json  paypulse-logo-tasks.jsonl
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json  mini.json  popover.json  settings.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_indexes.sql
src-tauri/src/: app_state.rs  clock.rs  commands.rs  ipc.rs  lib.rs  main.rs  tray.rs
src-tauri/src/engine/: mod.rs  rate.rs  rollover.rs  state.rs  tick.rs
src-tauri/src/persistence/: checkpoint.rs  mod.rs
src/components/: WindowShell.tsx
src/hooks/: useEngineControls.ts  useEngineTick.ts  useI18n.ts  useMilestone.ts  useSettings.ts  useStats.ts  useTheme.ts
src/i18n/: index.ts
src/i18n/locales/: main.en.json  main.zh.json  mini.en.json  mini.zh.json  popover.en.json  popover.zh.json  settings.en.json  settings.zh.json
src/main/: App.tsx  main.tsx
src/mini/: App.tsx  main.tsx
src/pixel/: CoinFlow.ts  index.ts  money.ts  pixel.css  sprites.tsx  useHoldToConfirm.ts
src/popover/: App.tsx
src/settings/: App.tsx  main.tsx
src/shared/: events.ts  format.ts  ipc.ts  types.ts
src/styles/: app.css
